--- a/decision tree model.ipynb
+++ b/decision tree model.ipynb
@@ -31,35 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "3065bfea-b0ee-41d9-93b2-188334e12d0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data\n",
     "test_data = pd.read_csv(\"test data.csv\")\n",
-    "train_data = pd.read_csv(\"train data.csv\")\n",
-    "price_data = pd.read_csv(\"price data.csv\")"
+    "train_data = pd.read_csv(\"train data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "6cbaf1d4-6a32-4688-b58f-f757ea1a1bc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create x object\n",
     "features = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
-    "x = test_data[features]\n",
+    "x = train_data[features]\n",
     "\n",
     "# Create target object\n",
-    "y = price_data"
+    "y = train_data.SalePrice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "220d64d1-9514-469a-8109-e2ae8413f189",
    "metadata": {},
    "outputs": [],
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "5239d60e-728e-416a-b43d-e3228a591401",
    "metadata": {},
    "outputs": [],
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "54148dd8-b046-4d7c-b745-e02f3f46a9b7",
    "metadata": {},
    "outputs": [],
@@ -99,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "30285bbe-79af-4be5-b9d8-bcbdfb22ba55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(max_leaf_nodes=50, random_state=1)"
+       "DecisionTreeRegressor(max_leaf_nodes=100, random_state=1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "0ee7ae5c-f7de-469a-b2cd-df21cbc4e546",
    "metadata": {},
    "outputs": [],
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "61aa8803-fc91-401e-9fc5-7d16ea9c8fb5",
    "metadata": {},
    "outputs": [
@@ -142,26 +141,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean absolute error:  1459.5684020095941\n",
+      "mean absolute error:  16815.938748057826\n",
       "First in-sample predictions:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[  2530.36363636, 209233.58928782],\n",
-       "       [  2177.53588517, 180953.52119505],\n",
-       "       [  2243.92592593, 170750.74916926],\n",
-       "       [  2517.5       , 224008.85827317],\n",
-       "       [  2183.2987013 , 166652.97313343],\n",
-       "       [  2005.61538462, 152568.682954  ],\n",
-       "       [  2183.2987013 , 166652.97313343],\n",
-       "       [  2167.375     , 148179.50370975],\n",
-       "       [  2243.92592593, 170750.74916926],\n",
-       "       [  2175.59285714, 178592.52138938]])"
+       "array([182392.31944444, 163142.5       , 125362.57333333,  70167.58333333,\n",
+       "       146415.0075188 , 332156.        , 270325.        , 159006.60714286,\n",
+       "       228735.80645161, 268500.        ])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "f2feec94-8543-4690-a4a0-f850532620b6",
    "metadata": {},
    "outputs": [],
@@ -186,6 +178,14 @@
     "# result\n",
     "predict = model.predict(test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c42420-d78d-4bc2-8f90-499a6489afa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
