--- a/random forest model.ipynb
+++ b/random forest model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "23d58ed9-b8d7-4202-9de8-0d04b5691233",
    "metadata": {},
    "outputs": [],
@@ -29,37 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "63c2c121-7496-4c80-a782-ede5882ac877",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data\n",
     "test_data = pd.read_csv(\"test data.csv\")\n",
-    "train_data = pd.read_csv(\"train data.csv\")\n",
-    "price_data = pd.read_csv(\"price data.csv\")"
+    "train_data = pd.read_csv(\"train data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "35994e05-6542-4ae1-9c11-d990bc35132f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create x object\n",
-    "features = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
-    "# test data\n",
-    "x = test_data[features]\n",
     "# train data\n",
-    "X = train_data[features]\n",
+    "# use only numerical data\n",
+    "x = train_data.drop(['SalePrice'], axis=1).select_dtypes(exclude=['object'])\n",
     "# Create target object\n",
-    "y = price_data.SalePrice"
+    "y = train_data.SalePrice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "15603ecc-703a-4a50-8d47-36b8607a32a3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +67,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
+   "id": "456bf4ba-961c-4aca-b4e2-9842b2fe65dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LotFrontage    212\n",
+      "MasVnrArea       6\n",
+      "GarageYrBlt     58\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# investigate how many missing values by column\n",
+    "missing_values = (x_train.isnull().sum())\n",
+    "print(missing_values[missing_values > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "175d0600-10ec-425c-81ea-3989bae85bd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handling missing values\n",
+    "# Drop column with missing values\n",
+    "# Fill in the line below: get names of columns with missing values\n",
+    "cols_with_missing = [col for col in x_train.columns\n",
+    "                     if x_train[col].isnull().any()]\n",
+    "\n",
+    "# Fill in the lines below: drop columns in training and validation data\n",
+    "reduced_x_train = x_train.drop(cols_with_missing, axis=1)\n",
+    "reduced_x_valid = x_valid.drop(cols_with_missing, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4976b990-8abb-4bcb-bad6-890bf6f58356",
    "metadata": {},
    "outputs": [],
@@ -88,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "58a6aa3f-46be-4e53-8e81-ea4fb5b8a653",
    "metadata": {},
    "outputs": [],
@@ -96,27 +133,16 @@
     "# Find the best model\n",
     "model = {}\n",
     "for m in models:\n",
-    "    model[m] = score_model(m, x_train, x_valid, y_train, y_valid)\n",
+    "    model[m] = score_model(m, reduced_x_train, reduced_x_valid, y_train, y_valid)\n",
     "best_model = min(model, key=model.get)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "db378768-c047-4837-8202-d0f852df5a53",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(max_depth=7, random_state=0)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fit the model\n",
     "best_model.fit(x, y)"
@@ -124,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "a0aa9d3b-99f1-4494-a24e-5295c082cf27",
    "metadata": {},
    "outputs": [
@@ -132,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error:  2427.5219614442335\n"
+      "Mean absolute error:  8518.100212328769\n"
      ]
     }
    ],
@@ -145,26 +171,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "8d87dd1a-43ce-46b1-96c3-77f2cea7233c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test data\n",
+    "test = test_data[features]\n",
     "# predict the train data\n",
-    "predict = best_model.predict(X)"
+    "predict = best_model.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "91343daa-254d-4178-b453-df4eed0d8fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price prediction of the test data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([119433.08, 158367.5 , 185351.21, ..., 156296.92, 132232.5 ,\n",
+       "       230870.6 ])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# result of the predictions\n",
+    "print(\"Price prediction of the test data:\")\n",
+    "predict"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91343daa-254d-4178-b453-df4eed0d8fe0",
+   "id": "866f11ce-9ab9-4593-b3ed-2e331df9e035",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# result of the predictions\n",
-    "print(\"Price prediction of the train data:\")\n",
-    "predict"
-   ]
+   "source": []
   }
  ],
  "metadata": {
