--- a/handling missing values.ipynb
+++ b/handling missing values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "51209156-bf03-4af8-9b6b-5b5c3116abd7",
    "metadata": {},
    "outputs": [],
@@ -16,14 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "777390e9-de26-4334-a94b-bf483186a938",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for comparing different models\n",
-    "def score_dataset(x_train, x_valid, y_train, y_valid):\n",
-    "    model = RandomForestRegressor(n_estimators=10, random_state=0)\n",
+    "def score_model(model, x_train, x_valid, y_train, y_valid):\n",
     "    model.fit(x_train, y_train)\n",
     "    preds = model.predict(x_valid)\n",
     "    return mean_absolute_error(y_valid, preds)"
@@ -31,27 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "620bcb07-f3bc-4012-ab98-89a0299483e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data\n",
-    "data = pd.read_csv(\"melbourne data.csv\")\n",
-    "\n",
-    "# target object\n",
-    "y = data.Price\n",
-    "\n",
-    "# predictor\n",
-    "# get data without price column\n",
-    "predictor = data.drop(['Price'], axis=1)\n",
-    "# get numerical data only\n",
-    "x = predictor.select_dtypes(exclude=['object'])"
+    "# read data\n",
+    "test_data = pd.read_csv(\"test data.csv\")\n",
+    "train_data = pd.read_csv(\"train data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "id": "e652cc81-b2bb-4f8e-a929-c5c1f19ed11d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train data\n",
+    "# use only numerical data\n",
+    "x = train_data.drop(['SalePrice'], axis=1).select_dtypes(exclude=['object'])\n",
+    "# Create target object\n",
+    "y = train_data.SalePrice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "c7559fef-ba0d-4ca0-8636-e8927b4a872c",
    "metadata": {},
    "outputs": [],
@@ -63,7 +68,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
+   "id": "a319e4fa-654c-44af-8556-13cd461c5443",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LotFrontage    212\n",
+      "MasVnrArea       6\n",
+      "GarageYrBlt     58\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check how many missing values by column\n",
+    "missing_values = (x_train.isnull().sum())\n",
+    "print(missing_values[missing_values > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "537b0b7c-de6e-42c7-9970-45c4d1931df3",
    "metadata": {},
    "outputs": [
@@ -72,13 +100,12 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 1 (Drop columns with missing values):\n",
-      "183550.22137772635\n"
+      "19003.3198630137\n"
      ]
     }
    ],
    "source": [
-    "# Missing values\n",
-    "# 1.Drop columns\n",
+    "# Missing values: Drop columns\n",
     "# get names of columns with missing values\n",
     "cols_with_missing = [col for col in x_train.columns\n",
     "                     if x_train[col].isnull().any()]\n",
@@ -93,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "64b5e11a-6103-4885-a2b9-113a4b38bb40",
    "metadata": {},
    "outputs": [
@@ -102,13 +129,12 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 2 (Imputation):\n",
-      "178166.46269899711\n"
+      "19243.57294520548\n"
      ]
     }
    ],
    "source": [
-    "# Missing values\n",
-    "# 2. Imputation\n",
+    "# Missing values: Imputation\n",
     "my_imputer = SimpleImputer()\n",
     "imputed_x_train = pd.DataFrame(my_imputer.fit_transform(x_train))\n",
     "imputed_x_valid = pd.DataFrame(my_imputer.transform(x_valid))\n",
@@ -123,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "a2952e37-8b10-4ca6-9efb-4c11f94ebf49",
    "metadata": {},
    "outputs": [
@@ -132,11 +158,12 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 3 (An Extension to Imputation):\n",
-      "178927.503183954\n"
+      "19349.617465753425\n"
      ]
     }
    ],
    "source": [
+    "# Missing values: extended imputation\n",
     "# Make copy to avoid changing original data (when imputing)\n",
     "x_train_plus = x_train.copy()\n",
     "x_valid_plus = x_valid.copy()\n",
@@ -157,177 +184,6 @@
     "\n",
     "print(\"MAE from Approach 3 (An Extension to Imputation):\")\n",
     "print(score_dataset(imputed_x_train_plus, imputed_x_valid_plus, y_train, y_valid))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "1dc9ff73-fba5-4866-919b-d4dfbe6ede39",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rooms</th>\n",
-       "      <th>Distance</th>\n",
-       "      <th>Postcode</th>\n",
-       "      <th>Bedroom2</th>\n",
-       "      <th>Bathroom</th>\n",
-       "      <th>Car</th>\n",
-       "      <th>Landsize</th>\n",
-       "      <th>BuildingArea</th>\n",
-       "      <th>YearBuilt</th>\n",
-       "      <th>Lattitude</th>\n",
-       "      <th>Longtitude</th>\n",
-       "      <th>Propertycount</th>\n",
-       "      <th>Car was missing</th>\n",
-       "      <th>BuildingArea was missing</th>\n",
-       "      <th>YearBuilt was missing</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3182.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>153.764119</td>\n",
-       "      <td>1940.000000</td>\n",
-       "      <td>-37.85984</td>\n",
-       "      <td>144.9867</td>\n",
-       "      <td>13240.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3016.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>193.0</td>\n",
-       "      <td>153.764119</td>\n",
-       "      <td>1964.839866</td>\n",
-       "      <td>-37.85800</td>\n",
-       "      <td>144.9005</td>\n",
-       "      <td>6380.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>555.0</td>\n",
-       "      <td>153.764119</td>\n",
-       "      <td>1964.839866</td>\n",
-       "      <td>-37.79880</td>\n",
-       "      <td>144.8220</td>\n",
-       "      <td>3755.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>3046.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>265.0</td>\n",
-       "      <td>153.764119</td>\n",
-       "      <td>1995.000000</td>\n",
-       "      <td>-37.70830</td>\n",
-       "      <td>144.9158</td>\n",
-       "      <td>8870.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>13.3</td>\n",
-       "      <td>3020.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>673.0</td>\n",
-       "      <td>673.000000</td>\n",
-       "      <td>1970.000000</td>\n",
-       "      <td>-37.76230</td>\n",
-       "      <td>144.8272</td>\n",
-       "      <td>4217.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Rooms  Distance  Postcode  Bedroom2  Bathroom  Car  Landsize  BuildingArea  \\\n",
-       "0    1.0       5.0    3182.0       1.0       1.0  1.0       0.0    153.764119   \n",
-       "1    2.0       8.0    3016.0       2.0       2.0  1.0     193.0    153.764119   \n",
-       "2    3.0      12.6    3020.0       3.0       1.0  1.0     555.0    153.764119   \n",
-       "3    3.0      13.0    3046.0       3.0       1.0  1.0     265.0    153.764119   \n",
-       "4    3.0      13.3    3020.0       3.0       1.0  2.0     673.0    673.000000   \n",
-       "\n",
-       "     YearBuilt  Lattitude  Longtitude  Propertycount  Car was missing  \\\n",
-       "0  1940.000000  -37.85984    144.9867        13240.0              0.0   \n",
-       "1  1964.839866  -37.85800    144.9005         6380.0              0.0   \n",
-       "2  1964.839866  -37.79880    144.8220         3755.0              0.0   \n",
-       "3  1995.000000  -37.70830    144.9158         8870.0              0.0   \n",
-       "4  1970.000000  -37.76230    144.8272         4217.0              0.0   \n",
-       "\n",
-       "   BuildingArea was missing  YearBuilt was missing  \n",
-       "0                       1.0                    0.0  \n",
-       "1                       1.0                    1.0  \n",
-       "2                       1.0                    1.0  \n",
-       "3                       1.0                    0.0  \n",
-       "4                       0.0                    0.0  "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imputed_x_train_plus.head()"
    ]
   },
   {
