--- a/random forest model.ipynb
+++ b/random forest model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "3f9b4e54-a189-43b2-82b0-16b3a5e78a3f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "23d58ed9-b8d7-4202-9de8-0d04b5691233",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "63c2c121-7496-4c80-a782-ede5882ac877",
    "metadata": {},
    "outputs": [],
@@ -41,21 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "35994e05-6542-4ae1-9c11-d990bc35132f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# train data\n",
     "# use only numerical data\n",
-    "x = train_data.drop(['SalePrice'], axis=1).select_dtypes(exclude=['object'])\n",
+    "features = ['LotArea', 'YearBuilt', '1stFlrSF', '2ndFlrSF', 'FullBath', 'BedroomAbvGr', 'TotRmsAbvGrd']\n",
+    "x = train_data[features]\n",
+    "\n",
     "# Create target object\n",
     "y = train_data.SalePrice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "15603ecc-703a-4a50-8d47-36b8607a32a3",
    "metadata": {},
    "outputs": [],
@@ -67,48 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "456bf4ba-961c-4aca-b4e2-9842b2fe65dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LotFrontage    212\n",
-      "MasVnrArea       6\n",
-      "GarageYrBlt     58\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# investigate how many missing values by column\n",
-    "missing_values = (x_train.isnull().sum())\n",
-    "print(missing_values[missing_values > 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "175d0600-10ec-425c-81ea-3989bae85bd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Handling missing values\n",
-    "# Drop column with missing values\n",
-    "# Fill in the line below: get names of columns with missing values\n",
-    "cols_with_missing = [col for col in x_train.columns\n",
-    "                     if x_train[col].isnull().any()]\n",
-    "\n",
-    "# Fill in the lines below: drop columns in training and validation data\n",
-    "reduced_x_train = x_train.drop(cols_with_missing, axis=1)\n",
-    "reduced_x_valid = x_valid.drop(cols_with_missing, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "4976b990-8abb-4bcb-bad6-890bf6f58356",
    "metadata": {},
    "outputs": [],
@@ -125,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "58a6aa3f-46be-4e53-8e81-ea4fb5b8a653",
    "metadata": {},
    "outputs": [],
@@ -133,16 +94,27 @@
     "# Find the best model\n",
     "model = {}\n",
     "for m in models:\n",
-    "    model[m] = score_model(m, reduced_x_train, reduced_x_valid, y_train, y_valid)\n",
+    "    model[m] = score_model(m, x_train, x_valid, y_train, y_valid)\n",
     "best_model = min(model, key=model.get)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "db378768-c047-4837-8202-d0f852df5a53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(criterion='absolute_error', random_state=0)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# fit the model\n",
     "best_model.fit(x, y)"
@@ -150,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "a0aa9d3b-99f1-4494-a24e-5295c082cf27",
    "metadata": {},
    "outputs": [
@@ -158,20 +130,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error:  8518.100212328769\n"
+      "Mean absolute error:  8902.216695205481\n"
      ]
     }
    ],
    "source": [
     "# predict the test\n",
-    "predictions = best_model.predict(x)\n",
-    "mae = mean_absolute_error(predictions, y)\n",
+    "predictions = best_model.predict(x_valid)\n",
+    "mae = mean_absolute_error(predictions, y_valid)\n",
     "print(\"Mean absolute error: \", mae)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "8d87dd1a-43ce-46b1-96c3-77f2cea7233c",
    "metadata": {},
    "outputs": [],
@@ -184,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "91343daa-254d-4178-b453-df4eed0d8fe0",
    "metadata": {},
    "outputs": [
@@ -202,7 +174,7 @@
        "       230870.6 ])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "866f11ce-9ab9-4593-b3ed-2e331df9e035",
+   "id": "a6066636-039c-4996-a260-70da0e99d281",
    "metadata": {},
    "outputs": [],
    "source": []
