--- a/handling missing values.ipynb
+++ b/handling missing values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "51209156-bf03-4af8-9b6b-5b5c3116abd7",
    "metadata": {},
    "outputs": [],
@@ -16,21 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "777390e9-de26-4334-a94b-bf483186a938",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function for comparing different models\n",
-    "def score_model(model, x_train, x_valid, y_train, y_valid):\n",
-    "    model.fit(x_train, y_train)\n",
-    "    preds = model.predict(x_valid)\n",
+    "# Function for comparing different approaches\n",
+    "def score_dataset(X_train, X_valid, y_train, y_valid):\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=0)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    preds = model.predict(X_valid)\n",
     "    return mean_absolute_error(y_valid, preds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "620bcb07-f3bc-4012-ab98-89a0299483e2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e652cc81-b2bb-4f8e-a929-c5c1f19ed11d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c7559fef-ba0d-4ca0-8636-e8927b4a872c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a319e4fa-654c-44af-8556-13cd461c5443",
    "metadata": {},
    "outputs": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "537b0b7c-de6e-42c7-9970-45c4d1931df3",
    "metadata": {},
    "outputs": [
@@ -100,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 1 (Drop columns with missing values):\n",
-      "19003.3198630137\n"
+      "17952.591404109586\n"
      ]
     }
    ],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "64b5e11a-6103-4885-a2b9-113a4b38bb40",
    "metadata": {},
    "outputs": [
@@ -129,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 2 (Imputation):\n",
-      "19243.57294520548\n"
+      "18250.608013698627\n"
      ]
     }
    ],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "a2952e37-8b10-4ca6-9efb-4c11f94ebf49",
    "metadata": {},
    "outputs": [
@@ -158,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "MAE from Approach 3 (An Extension to Imputation):\n",
-      "19349.617465753425\n"
+      "18253.31479452055\n"
      ]
     }
    ],
